# devman

./: .gitignore  LICENSE  README.md  devpod  justfile  pyproject.toml  uv.lock.license
.github/: dependabot.yml
.github/actions/disk-cleanup/: action.yml
.github/workflows/: linters.yml  publish-arch-container.yml  publish-container.yml  publish-debian-container.yml  python-publish.yml
containers/arch/: Containerfile  justfile
containers/debian/: Containerfile  debian-de.sources  justfile
containers/debian-large/: Containerfile
debian/: Containerfile
devman/: __main__.py  cli.py  config.py  exitcodes.py  podman.py
devpod/: __main__.py  cli.py  config.py  podman.py
