# SPDX-FileCopyrightText: Stefan Tatschner
#
# SPDX-License-Identifier: CC0-1.0

# https://github.com/astral-sh/uv/issues/3957
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devman"
version = "0.1.4"
description = "Manager for Development Containers with podman"
readme = "README.md"
maintainers = [
    { name = "Stefan Tatschner", email = "stefan@rumpelsepp.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.5.1",
    "platformdirs>=4.3.6",
]

[project.scripts]
"devman" = "devman.__main__:main"

[tool.uv]
dev-dependencies = [
    "commitizen>=3.30.0",
    "mypy >=1.0,<2.0",
    "pylsp-mypy >=0.6,<0.7",
    "pylsp-rope >=0.1,<0.2",
    "python-lsp-server >=1.5,<2.0",
    "reuse >=4.0,<5.0",
    "ruff >=0.7.0,<0.8.0",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = [
    # TODO: Enable this
    # "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestlye
    "F",    # pyflakes
    "I",    # isort
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
]
ignore = [
    "E402",     # Module level import not at top of file
    "E501",     # line length
    "PLR2004",  # magic value used in comparison
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments to function call
    "PLR0915",  # too many statements
    "PLC1901",  # empty string is falsey
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
major_version_zero = true
annotated_tag = true
